--- a/pom.xml
+++ b/pom.xml
@@ -2262,7 +2262,7 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>7.3.24</carbon.identity.framework.version>
+        <carbon.identity.framework.version>7.3.25-SNAPSHOT</carbon.identity.framework.version>
         <carbon.identity.framework.version.range>[5.14.67, 8.0.0)</carbon.identity.framework.version.range>
 
         <!--SAML Common Utils Version-->
@@ -2273,7 +2273,7 @@
         <carbon.consent.mgt.version>2.6.2</carbon.consent.mgt.version>
 
         <!--Identity Governance Version-->
-        <identity.governance.version>1.10.0</identity.governance.version>
+        <identity.governance.version>1.10.1-SNAPSHOT</identity.governance.version>
 
         <!--Identity Carbon Versions-->
         <identity.carbon.auth.saml2.version>5.9.4</identity.carbon.auth.saml2.version>
@@ -2288,7 +2288,7 @@
         <identity.inbound.auth.openid.version>5.10.2</identity.inbound.auth.openid.version>
         <identity.inbound.auth.sts.version>5.11.5</identity.inbound.auth.sts.version>
         <identity.inbound.provisioning.scim.version>5.7.7</identity.inbound.provisioning.scim.version>
-        <identity.inbound.provisioning.scim2.version>3.4.85</identity.inbound.provisioning.scim2.version>
+        <identity.inbound.provisioning.scim2.version>3.4.86-SNAPSHOT</identity.inbound.provisioning.scim2.version>
 
         <!-- Identity User Versions -->
         <identity.user.account.association.version>5.5.8</identity.user.account.association.version>
@@ -2391,10 +2391,10 @@
         <identity.apps.tests.version>1.6.378</identity.apps.tests.version>
 
         <!-- Charon -->
-        <charon.version>3.4.1</charon.version>
+        <charon.version>4.0.22-SNAPSHOT</charon.version>
 
         <!-- Carbon Kernel -->
-        <carbon.kernel.version>4.10.16</carbon.kernel.version>
+        <carbon.kernel.version>4.10.17-SNAPSHOT</carbon.kernel.version>
 
         <!-- Identity Verification -->
         <identity.verification.version>1.0.7</identity.verification.version>
